menu now looks good in order delivery and main manu